cmake_minimum_required(VERSION 3.22)

set(VERSIONABLE_NAME ${VERSIONABLE_NAME})
set(VERSIONABLE_VERSION_PATCH ${VERSIONABLE_VERSION_PATCH})
set(VERSIONABLE_VERSION_PRIMARY ${VERSIONABLE_VERSION_PRIMARY})
set(VERSIONABLE_VERSION_SECONDARY ${VERSIONABLE_VERSION_SECONDARY})

set(
        PROJECT_FULL_NAME
        ${VERSIONABLE_NAME}-${VERSIONABLE_VERSION_PRIMARY}.${VERSIONABLE_VERSION_SECONDARY}.${VERSIONABLE_VERSION_PATCH}
)

project(${PROJECT_FULL_NAME})

set(CMAKE_CXX_STANDARD 17)

configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/BuildConfig.h.in"
        "${CMAKE_CURRENT_SOURCE_DIR}/BuildConfig.h"
)

configure_file(${PROJECT_SOURCE_DIR}/../Versionable/Cpp/Version.cpp ${PROJECT_SOURCE_DIR} COPYONLY)

include_directories("${PROJECT_BINARY_DIR}")

file(
        GLOB APP_SRC
        "*.h"
        "*.cpp"
)

add_executable(Version ${APP_SRC})

install(TARGETS Version DESTINATION bin/${PROJECT_NAME})